// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/List Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <ul
      class="sc-aKZfe sc-cvJHqN PVvma jBGdWf sc-dkmKpi jfoJtZ"
    >
      <li>
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
        >
          You can put 
          <a
            class="sc-GTWni kMBmCU sc-gsxnyZ inhWwE"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
        >
          Multiline text
          <div
            class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Core/List Ordered 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-dWdcrH ScrBw"
  >
    <ol
      class="sc-aKZfe sc-kmASHI PVvma ljYIqS sc-dkmKpi jfoJtZ"
    >
      <li>
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
        >
          You can put 
          <a
            class="sc-GTWni kMBmCU sc-gsxnyZ inhWwE"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
        >
          Multiline text
          <div
            class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;
